tests/stage2/t1_features/error_handling/option_match_exhaustive.fuse
// EXPECTED ERROR:
// error: non-exhaustive match for `Option`

fn unwrap(o: Option<Int>) -> Int {
  match o {
    Some(v) => v
  }
}

@entrypoint
fn main() {
  println(unwrap(Some(5)))
}
